added mock route selection

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 		<select id="typeselect">
 			<option selected>Yo (Specified Number)</option>
 		</select>
+		&nbsp;&nbsp;&nbsp;
+		<span>Route: </span>
+		<select id="routeselect">
+			<option selected>[Editor Route]</option>
+			<option>GOM</option>
+			<option>North Atlantic</option>
+			<option>Persian Gulf</option>
+		</select>
 	</div>
 	<div>
 		Depth
